# lyrebird

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  manifest.txt  reference-examples.md  renames.txt
.claude/: settings.local.json
src/: ffprobe.rs  main.rs  manifest.rs  rename_plan.rs  sheet.rs  tmdb.rs  validate.rs
