[package]
name = "lyrebird"
version = "0.1.0"
edition = "2021"
description = "Identify and rename HandBrake video rips using TMDB metadata"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# strsim = "0.11"  # fuzzy title cross-check, planned but not yet implemented
