[package]
name = "lyrebird"
version = "0.1.0"
edition = "2021"
description = "Identify and rename HandBrake video rips using TMDB metadata"
repository = "https://github.com/brianmay/lyrebird"
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
strsim = "0.11"

[dev-dependencies]
tempfile = "3"
